--- a/business/sass/style.sass
+++ b/business/sass/style.sass
@@ -411,11 +411,41 @@ body
             padding: 0px 20px 15px
             display: flex
             justify-content: space-between
+        &-bottom-head   
+            position: relative
+            .main__text
+                padding-right: 140px    
+                font-size: 15px
         &-bottom-item
             display: flex
             flex-direction: column
             span
                 font-size: 14px
+        &-documents
+                display: inline-block
+                position: absolute
+                top: 0
+                right: 10px
+                transform: translateY(-50%)
+                background-color: #5F5E5E
+                color: #fff
+                padding: 20px
+                text-decoration: none
+                max-width: 130px
+                span
+                    position: relative
+                    &::after
+                        content: ''
+                        display: block
+                        position: absolute
+                        top: 23px
+                        right: -20px
+                        background-image: url('../img/triangle-down.svg')
+                        background-repeat: no-repeat
+                        width: 17px
+                        height: 17px
+                        background-position: center
+                        background-size: contain
         .main__text
             margin: 0
         width: 100%
@@ -480,6 +510,7 @@ body
         &_bg
             background-color: $main_grey
             padding: 35px 40px
+            margin: -15px 0px
         span
             text-transform: uppercase
             font-weight: bold
