--- a/business/sass/media.sass
+++ b/business/sass/media.sass
@@ -8,6 +8,20 @@ $main_grey: #E8E8E8
     .swiper-container1, .swiper-container2
         .swiper-slide
             width: auto
+    .main
+        &__sertificates
+            .swiper-gallery
+                display: none
+            .swiper-wrapper 
+                display: flex
+                flex-wrap: wrap
+                justify-content: space-between
+                flex-direction: row
+                align-items: center
+                height: 100%
+            .swiper-slide
+                height: auto 
+                width: auto
 @media screen and ( max-width:  1500px)
     
     .nav
@@ -75,6 +89,8 @@ $main_grey: #E8E8E8
                 display: none
             &-text
                 max-width: 350px
+        &__sertificates
+            padding: 0px 20px
         &__author
             margin-top: 10px
             margin-bottom: 5px
@@ -150,12 +166,22 @@ $main_grey: #E8E8E8
         &__tender
             .main__text
                 font-size: 14px
+        &__sertificates
+            overflow: hidden
+            .swiper-wrapper
+                flex-wrap: nowrap
+            .swiper-slide
+                height: auto 
+                width: auto
+                img
+                    overflow: hidden
+                    object-fit: contain
     .how
         .container
             padding: 0px 25px
         .main__text
             font-size: 16px
-
+        
 
 @media screen and ( max-width:  860px)
     .main
@@ -294,6 +320,7 @@ $main_grey: #E8E8E8
                 margin-left: 0
                 margin-right: 5px
     .main
+        
         &__search
             padding: 0
             &_wrap
