--- a/business/sass/style.sass
+++ b/business/sass/style.sass
@@ -251,6 +251,7 @@ body
     position: relative
 .purchise-header
     h1
+        width: 100%
         top: 50%
         position: absolute
         transform: translateY(-50%)
@@ -258,8 +259,11 @@ body
         font-size: 26px
         font-weight: 900
         text-align: center
+.nomap
+    background-image: none
 .main-header
     h1
+        width: 100%
         top: 50%
         position: absolute
         transform: translateY(-50%)
@@ -273,10 +277,19 @@ body
     justify-content: space-between
     
 .main
+    .swiper-gallery
+        text-align: center
     max-width: 760px
     float: left
     position: relative
     border-top: 2px solid #707070
+    &__gallery
+        display: flex
+        flex-wrap: wrap
+        justify-content: space-between
+        align-items: center
+    &__sertificate
+        margin: 5px 0px
     &__video
         border-bottom: 2px solid #707070
         display: flex
