--- a/cleanback/sass/media.sass
+++ b/cleanback/sass/media.sass
@@ -17,6 +17,8 @@ $light_grey: #D8D9E6
             width: 50%
         &__wrapper
             display: flex
+        &__links
+            margin-top: 10px
         &__bg
             z-index: 10
             flex: 0 0 50%
@@ -93,7 +95,7 @@ $light_grey: #D8D9E6
         padding: 20px 0px
         max-height: 70px
         &__nav, &__contacts
-            display: none
+            display: none        
         &__logo
             position: relative
             max-width: 40%
@@ -143,6 +145,8 @@ $light_grey: #D8D9E6
     
     .banner
         padding-top: 0
+        &__bg
+            padding-top: 70px
         &__title
             margin-top: 20px
         &__wrapper
