--- a/cleanback/sass/media.sass
+++ b/cleanback/sass/media.sass
@@ -224,6 +224,20 @@ $light_grey: #D8D9E6
             position: relative
             overflow: hidden
             min-height: 300px
+            &.nosneaker
+                min-height: 200px
+                max-height: 200px
+                .service__sneaker
+                    transform: none
+                    max-width: none
+                    width: 100%
+                    height: 200px
+                    bottom: 0
+                    right: 0
+                    top: auto
+                    left: auto
+                    position: absolute
+                    object-fit: cover
         &__sneaker
             top: 40%
             left: 50%
