More commits to god of commits!

--- a/cleanback/sass/media.sass
+++ b/cleanback/sass/media.sass
@@ -69,23 +69,26 @@ $light_grey: #D8D9E6
         right: 0
         top: 0
         padding: 70px 30px 30px
+        .header__link
+            font-size: 14px
         .header__list
             flex-direction: column
             .header__item + .header__item
                 margin: 15px 0 0 0
             
         .header__contacts
-            margin-top: 50px
+            margin-top: 40px
             flex-direction: column
             .header__contact + .header__contact
-                margin: 30px 0 0 0
+                margin: 20px 0 0 0
         .banner__social
             position: absolute
             bottom: 0
             flex-direction: column
             .banner__link
+                font-size: 14px
                 margin-left: 0px
-                margin-bottom: 30px
+                margin-bottom: 20px
         &.active
             transform: translateX(0)
     .header
