--- a/cleanback/sass/media.sass
+++ b/cleanback/sass/media.sass
@@ -33,8 +33,11 @@ $light_grey: #D8D9E6
             display: flex
         &__next, &__prev
             justify-self: flex-end
-    .service__mobile
-        display: none
+    .service
+        &__mobile
+            display: none
+        &__wrap
+            min-height: 442px
 
     .about
         display: flex
