--- a/cleanback/sass/style.sass
+++ b/cleanback/sass/style.sass
@@ -199,15 +199,16 @@ body
         color: $dark_black
         text-align: center
         line-height: 40px
+        transform: rotate(180deg)
         &:hover
             background-color: $dark_black
             color: #fff
         &:focus
             outline: none
     &__next
-        order: 2
-    &__prev
         order: 3
+    &__prev
+        order: 2
         justify-self: flex-end
             
 
