--- a/cleanback/sass/style.sass
+++ b/cleanback/sass/style.sass
@@ -266,9 +266,8 @@ body
         max-height: 260px
         max-width: 600px
         align-items: flex-start
-    &__item + &__item
-        margin-top: 15px    
     &__item
+        margin-bottom: 15px  
         color: $light_black
         font-size: 16px
         line-height: 16px
