no mo fox for today

--- a/cleanback/sass/media.sass
+++ b/cleanback/sass/media.sass
@@ -38,6 +38,8 @@ $light_grey: #D8D9E6
             display: none
         &__wrap
             min-height: 442px
+        &__button
+            margin-bottom: 30px
 
     .about
         display: flex
