--- a/cleanback/sass/style.sass
+++ b/cleanback/sass/style.sass
@@ -120,11 +120,16 @@ body
     padding-top: 80px
     padding-bottom: 40px
     background-color: #EFF2F4
+    position: relative
+    overflow: hidden
     &__abs-bg
         position: absolute
         left: 0
         top: 250px
         z-index: -1
+        width: 100%
+        img
+            object-fit: contain
     &__button
         margin-top: 10px
     &__content
@@ -170,6 +175,133 @@ body
             opacity: 1
     &__link + &__link
         margin-left: 35px
+
+.form
+    position: relative
+    top: 40%
+    transform: translateY(-50%)
+    &__wrapper
+        position: absolute
+        height: 100%
+        width: 100%
+        top: 0
+        left: 100%
+        z-index: 90
+        background-color: #fff
+        &.active
+            left: 0
+    .jssb
+        width: 100%
+        display: flex
+        flex-direction: column
+        justify-content: space-between
+    &__body
+        max-width: 970px
+        max-height: 470px   
+        padding: 35px 50px
+    &__header
+        display: flex
+        justify-content: space-between
+        padding-bottom: 40px
+        border-bottom: 1px solid $light_grey
+    &__title
+        font-size: 20px
+        font-weight: bold
+    &__close
+        span
+            display: inline-block
+            width: 20px
+            height: 1px
+            background-color: #000
+            transform: rotate(45deg)
+            position: relative
+            &::after
+                content: ''
+                display: inline-block
+                position: absolute
+
+                width: 20px
+                height: 1px
+                background-color: #000
+                transform: rotate(90deg)
+        &:hover
+            cursor: pointer
+    &__content
+        padding-top: 35px
+        display: flex
+        justify-content: space-between
+        flex-wrap: wrap
+    &__col
+        flex: 0 0 30%
+    &__block + &__block
+        margin-top: 15px
+    &__subtitle
+        font-size: 12px
+        font-weight: 500
+        color: $dark_black
+        opacity: .3
+        margin-bottom: 10px
+    &__labels
+        display: flex
+        flex-direction: column
+    &__label + &__label
+        margin-top: 15px
+    &__input + &__input
+        margin-top: 15px
+    &__input
+        appearance: none
+        width: 100%
+        padding: 15px 0px 15px 30px
+        border: 1px solid $light_grey
+        &:focus
+            outline: none
+    &__total
+        margin-bottom: 30px
+        display: flex
+        justify-content: space-between
+    &__price
+        font-size: 18px
+        font-weight: 500
+    &__button
+        width: 100%
+    &__check
+        border: 1px solid $light_grey
+        display: inline-block
+        position: relative
+        height: 18px
+        width: 18px
+        margin-right: 10px
+        &::after
+            position: absolute
+            content: ''
+            display: none
+            height: 15px
+            width: 15px
+            top: 50%
+            left: 50%
+            transform: translate(-50%, -50%)
+            background-image: url('../svg/succsess.svg')
+            background-repeat: no-repeat
+            background-position: center
+    select
+        &:hover
+            cursor: pointer
+    &__label
+        display: flex
+        align-items: center
+        user-select: none
+        input[type="checkbox"]
+            display: none
+        &:hover
+            cursor: pointer
+            .form__check
+                border: 1px solid $dark_black
+            
+    input[type="checkbox"]:checked + span.form__check
+        background-color: $dark_black
+        &::after
+            display: block
+            
 
 .compare
     padding: 80px 0px
