--- a/business/sass/media.sass
+++ b/business/sass/media.sass
@@ -22,12 +22,23 @@ $main_grey: #E8E8E8
             .swiper-slide
                 height: auto 
                 width: auto
+        &__team
+            .swiper-wrapper 
+                display: flex
+                flex-wrap: wrap
+                justify-content: space-between
+                width: 100%
+            .swiper-slide
+                margin-top: 20px
+                height: auto
+                width: auto
+
 @media screen and ( max-width:  1500px)
-    
     .nav
         &__item
             a
                 font-size: 12px
+
 @media screen and ( max-width:  1380px)
     body
         background-position-x: 20px
@@ -80,6 +91,8 @@ $main_grey: #E8E8E8
         &>*
             padding-left: 40px
             padding-right: 40px
+        &__picture
+            padding: 0px
         &__text
             padding: 15px 40px 20px 
         &__video
@@ -157,6 +170,7 @@ $main_grey: #E8E8E8
                     font-size: 10px
         &__policy
             margin-top: 20px
+            
 @media screen and ( max-width:  1000px)
     .nav
         margin-top: 30px
@@ -182,7 +196,6 @@ $main_grey: #E8E8E8
         .main__text
             font-size: 16px
         
-
 @media screen and ( max-width:  860px)
     .main
         &__header
@@ -214,8 +227,6 @@ $main_grey: #E8E8E8
                 span
                     &::after
                         top: 3px
-        
-            
 
 @media screen and ( max-width:  630px)
     .purchise-header
@@ -280,6 +291,7 @@ $main_grey: #E8E8E8
             flex-direction: column
             &>*
                 margin: 10px 0px
+
 @media screen and ( max-width:  530px)
     .main
         &__search
@@ -304,7 +316,6 @@ $main_grey: #E8E8E8
                 span
                     font-size: 14px
                     margin-bottom: 10px
-
 
 @media screen and ( max-width:  400px)
     .purchise-header
