--- a/cleanback/sass/style.sass
+++ b/cleanback/sass/style.sass
@@ -491,6 +491,12 @@ body
         padding: 50px 0px
         display: flex
         justify-content: space-between
+    &__list
+        list-style-type: none
+        li
+            display: inline-block
+        li + li
+            margin-top: 10px
     &__logo
         padding-top: 60px
         img
@@ -537,6 +543,6 @@ body
         font-weight: 800
         font-size: 14px
         margin-bottom: 20px
-    &__group
+    &__group, &__list
         display: flex
         flex-direction: column
